--- a/.github/workflows/run_screener.yml
+++ b/.github/workflows/run_screener.yml
@@ -33,6 +33,6 @@ jobs:
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
-          git add web/index.html web/*.csv || true
+          git add docs/index.html docs/*.csv || true
           git commit -m "Update screener output" || echo "No changes to commit"
           git push
