--- a/.github/workflows/run_screener.yml
+++ b/.github/workflows/run_screener.yml
@@ -14,11 +14,22 @@ jobs:
     steps:
       - name: Checkout repo
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
 
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
           python-version: "3.11"
+
+      # ✅ NEW: Cache your price history between runs
+      - name: Cache price data
+        uses: actions/cache@v4
+        with:
+          path: data_cache
+          key: ycache-${{ runner.os }}-${{ hashFiles('requirements.txt') }}
+          restore-keys: |
+            ycache-${{ runner.os }}-
 
       - name: Install dependencies
         run: |
@@ -33,6 +44,13 @@ jobs:
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
+
+          # In case main advanced since checkout, rebase before committing
+          git pull --rebase origin main || true
+
           git add docs/ || true
           git commit -m "Update screener output" || echo "No changes to commit"
+
+          # Rebase again just in case, then push
+          git pull --rebase origin main || true
           git push
